--- a/MoodleModulePrototypeComponents/Web.PersonnelSTU.FakeDBUtilApp/Views/Shared/_Layout.cshtml
+++ b/MoodleModulePrototypeComponents/Web.PersonnelSTU.FakeDBUtilApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Web.Common.App.Extensions
+@using Web.PersonnelSTU.FakeDBUtilApp.Controllers
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
