--- a/src/StudentCard.Web.UI/Views/Shared/_Layout.cshtml
+++ b/src/StudentCard.Web.UI/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
 
-    @Scripts.Render("~/Scripts/jquery/bundle")
+    @Scripts.Render("~/Scripts/jqueryBundle")
     @Scripts.Render("~/Scripts/modernizr/bundle")    
     @Scripts.Render("~/Scripts/bootstrap/bundle")      
     
