--- a/src/StudentCard.Web.UI/Views/StudentCard/Index.cshtml
+++ b/src/StudentCard.Web.UI/Views/StudentCard/Index.cshtml
@@ -1,6 +1,25 @@
-﻿@{
+﻿@using StudentCard.Web.UI.Controllers
+@using Web.Common.App.Extensions
+@{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@{ Html.RenderPartial("~/Views/StudentCard/Search.cshtml");}
+@{ Html.RenderPartial("~/Views/Persons/List.cshtml");}
+
+<div id="studentCardPanel">
+
+</div>
+
+<script>
+    $(function() {
+        $("#person-container").click("a",
+            function(e) {
+                var id = $(e.target).attr("id");
+                $("#person-container").empty();
+
+                var url = "@(Html.BuildUrlFromExpression<StudentCardController>(c => c.Details(0)))";
+                $("#studentCardPanel").load(url.replace(0, id));
+            });
+    });
+</script>
