Shown info about student card and his marks.

--- a/src/StudentCard.Web.UI/Views/Persons/List.cshtml
+++ b/src/StudentCard.Web.UI/Views/Persons/List.cshtml
@@ -3,7 +3,7 @@
 
 <div id="search-form" class="form-inline">
     <input class="form-control" name="FirstName" type="text" placeholder="Имя" />
-    <input class="form-control" name="LastName" type="text" placeholder="Фамилия" />
+    <input class="form-control" name="LastName" type="text" placeholder="Фамилия" value="Коротаев"/>
     <input class="form-control" name="MiddleName" type="text" placeholder="Отчество" />
 
     <button id="search" class="btn btn-primary">Поиск</button>
