--- a/src/StudentCard.Web.UI/Views/StudentCard/Details.cshtml
+++ b/src/StudentCard.Web.UI/Views/StudentCard/Details.cshtml
@@ -1,26 +1,24 @@
-﻿<ul class="nav nav-tabs" id="myTab" role="tablist">
+﻿@using StudentCard.Web.UI.Controllers
+@using Web.Common.App.Extensions
+@using StudentCard.Web.UI.Models.StudentCard.Details
+
+@model StudentCardDetailsModel
+
+<ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
-        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
+        <a class="nav-link active" id="front-tab" data-toggle="tab" href="#front" role="tab" aria-controls="front" aria-selected="true">Лицевая часть</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#marks" role="tab" aria-controls="marks" aria-selected="false">Оценки</a>
     </li>
 </ul>
-<div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">ыва</div>
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">проп</div>
-    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+<div class="tab-content">
+    <div class="tab-pane fade show active" id="front" role="tabpanel" aria-labelledby="front-tab">
+        <br/>
+        @{ Html.RenderAction<StudentCardController>(c => c.Front(Model.PersonId));}
+    </div>
+    <div class="tab-pane fade" id="marks" role="tabpanel" aria-labelledby="profile-tab">
+        <br />
+        @{ Html.RenderAction<StudentCardController>(c => c.Marks(Model.PersonId)); }
+    </div>
 </div>
-
-<script>
-    $(function() {
-        $('#myTab').click('a',
-            function(e) {
-                e.preventDefault();
-                $(this).tab('show');
-            });
-    });
-</script>
