--- a/src/StudentCard.Web.UI/Views/StudentCard/Details.cshtml
+++ b/src/StudentCard.Web.UI/Views/StudentCard/Details.cshtml
@@ -17,23 +17,33 @@
         <a class="nav-link" id="marks-tab" data-toggle="tab" href="#marks" role="tab" aria-controls="marks" aria-selected="false">Оценки</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" id="documentation-tab" data-toggle="tab" href="#documentation" role="tab" aria-controls="marks" aria-selected="false">Документация</a>
+        <a class="nav-link" id="documentation-tab" data-toggle="tab" href="#documentation" role="tab" aria-controls="documentation" aria-selected="false">Документация</a>
     </li>
 </ul>
+    <br />
 
-<br />
+    <div class="tab-content">
+        <div class="tab-pane fade show active" id="front" role="tabpanel" aria-labelledby="front-tab">
+            <br />
+            @{ Html.RenderAction<StudentCardController>(c => c.Front(Model.PersonId));}
+        </div>
+        <div class="tab-pane fade" id="marks" role="tabpanel" aria-labelledby="marks-tab">
+            <br />
+            @{ Html.RenderAction<StudentCardController>(c => c.Marks(Model.PersonId)); }
+        </div>
+        <div class="tab-pane fade" id="documentation" role="tabpanel" aria-labelledby="documentation-tab">
+            <br />
+            @{ Html.RenderAction<DocumentationController>(c => c.Details(Model.PersonId)); }
 
-<div class="tab-content">
-    <div class="tab-pane fade show active" id="front" role="tabpanel" aria-labelledby="front-tab">
-        <br />
-        @{ Html.RenderAction<StudentCardController>(c => c.Front(Model.PersonId));}
+            <br class="my-4" />
+
+            @{ Html.RenderAction<StudentCardController>(c => c.AcademicDebts(Model.PersonId)); }
+        </div>
     </div>
-    <div class="tab-pane fade" id="marks" role="tabpanel" aria-labelledby="marks-tab">
-        <br />
-        @{ Html.RenderAction<StudentCardController>(c => c.Marks(Model.PersonId)); }
-    </div>
-    <div class="tab-pane fade" id="documentation" role="tabpanel" aria-labelledby="documentation-tab">
-        <br />
-        @{ Html.RenderAction<DocumentationController>(c => c.Details(Model.PersonId)); }
-    </div>
-</div>
+<script>
+    $(function () {
+        $("a.trip").click(function () {
+            $('#documentation-tab').tab('show');
+        })
+    });
+</script>
