--- a/src/DepartmentCard.Web.UI/Views/Department/Details.cshtml
+++ b/src/DepartmentCard.Web.UI/Views/Department/Details.cshtml
@@ -1,7 +1,6 @@
 ﻿@model dynamic
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Модуль деканата";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
