--- a/src/StudentCard.Web.UI/Views/StudentCard/Details.cshtml
+++ b/src/StudentCard.Web.UI/Views/StudentCard/Details.cshtml
@@ -5,7 +5,7 @@
 @model StudentCardDetailsModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Карточка студента";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
