--- a/src/TeacherCard.Web.UI/Views/Teacher/Details.cshtml
+++ b/src/TeacherCard.Web.UI/Views/Teacher/Details.cshtml
@@ -4,7 +4,7 @@
 @model TeacherCard.Web.UI.Models.Teacher.Details.TeacherDetailsModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Модуль преподавателя";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
